--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@node-saml/node-saml",
+  "name": "@techteamer/node-saml2",
   "version": "4.0.3",
   "description": "SAML 2.0 implementation for Node.js",
   "keywords": [
