--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/node-saml/node-saml.git"
+    "url": "https://github.com/TechTeamer/node-saml2.git"
   },
   "license": "MIT",
   "author": {
